// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Container should render with content 1`] = `
.c0 {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: -15px;
  margin-left: -15px;
}

@media (min-width:1400px) {
  .c0 {
    max-width: 1140px;
  }
}

@media (max-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (max-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`UI Container should render with props example className 1`] = `
.c0 {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: -15px;
  margin-left: -15px;
}

@media (min-width:1400px) {
  .c0 {
    max-width: 1140px;
  }
}

@media (max-width:992px) {
  .c0 {
    max-width: 960px;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 720px;
  }
}

@media (max-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

<div>
  <div
    class="c0 container-test"
  >
    <div
      class="c1"
    >
      Content
    </div>
  </div>
</div>
`;
